--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,5 +4,4 @@ jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-      - name: my-step
-        run: make say-hello
+     - run: make say-hello
