--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,4 +4,7 @@ jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-     - run: make say-hello
+     - uses: actions/checkout@v2
+      - name: Say
+        run: |
+          make say-hello
