--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,5 +6,4 @@ jobs:
     steps:
      - uses: actions/checkout@v2
       - name: Say
-        run: |
-          make say-hello
+        run: make say-hello
