--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,17 @@
+# file: .github/workflows/hello-world.yml
 name: hello-world
+# on – определяет события, которые запускают воркфлоу
 on: push
 jobs:
-  my-job:
+  # build – произвольно выбранное имя задания
+  # их может быть больше одного
+  build:
+    # операционная система для работы воркфлоу
     runs-on: ubuntu-latest
-    steps:
-     - uses: actions/checkout@v2
-      - name: Say
-        run: make say-hello
+    steps: # список шагов, которые надо выполнить
+      # экшен — выполняет какую-то задачу
+      # checkout — клонирует репозиторий
+      - uses: actions/checkout@v3
+      # run – произвольная bash-команда
+      # ls -la выведет содержимое текущего репозитория
+      - run: make say-hello
